--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             </div>
             
             <div class="menu-items">
-                <a href="https://chifuchi.github.io/inicio/" class="menu-item home-button">INICIO</a>
-               <a href="https://chifuchi.github.io/paginaweb0/" class="menu-item">PAGINA 1</a>
-                <a href="https://chifuchi.github.io/paginaminimalista/" class="menu-item">PAGINA 2</a>
-                <a href="https://chifuchi.github.io/pagina-web-con-boostrap/" class="menu-item">PAGINA 3</a>
-                <a href="https://chifuchi.github.io/pagina-web-minimalista/" class="menu-item">PAGINA 4</a>
-                <a href="https://chifuchi.github.io/localhost/" class="menu-item">LOCALHOST</a>
+                <a href=" " class="menu-item home-button">INICIO</a>
+               <a href="https://erik-wq.github.io/crear-web-desde-cero/" class="menu-item">PAGINA 1</a>
+                <a href="https://erik-wq.github.io/pagina-html/" class="menu-item">PAGINA 2</a>
+                <a href="https://erik-wq.github.io/bootstrap/">PAGINA 3</a>
+                <a href=" ">PAGINA 4</a>
+                <a href=" " class="menu-item">LOCALHOST</a>
                 <a href="curriculum/index.html" class="menu-item">CURRICULUM</a>
             </div>
         </div>
