--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                <a href="https://erik-wq.github.io/crear-web-desde-cero/" class="menu-item">PAGINA 1</a>
                 <a href="https://erik-wq.github.io/pagina-html/" class="menu-item">PAGINA 2</a>
                 <a href="https://erik-wq.github.io/bootstrap/" class="menu-item">PAGINA 3</a>
-                <a href=" " class="menu-item">PAGINA 4</a>
+                <a href="https://erik-wq.github.io/css3-desde-cero/" class="menu-item">PAGINA 4</a>
                 <a href="https://erik-wq.github.io/localhost/" class="menu-item">LOCALHOST</a>
                 <a href="curriculum/index.html" class="menu-item">CURRICULUM</a>
             </div>
